cli/src/tests/error/function.sibs
i#mport(./common.sibs);
im%port (./common.sibs);
imp^ort (./common.sibs);
import^(./common.sibs);
import!(./common.sibs);
remove? ();
"hash";